MonetDB5/src/mal/Tests/tst102.stable
# Monet Database Server V5.0
# Copyright (c) 1993-2003, CWI. All rights reserved.
# compiled for 32biti686-pc-linux-gnu/32bit.
# config:/ufs/mk/monet_5/src/mal/Tests/tst.conf
# dbfarm:/ufs/mk/monet_5/Linux/var/MonetDB
# dbname:demo
## the calls are wrong, they violate the type constraint
#command + (L:any::1, R:any::1):any::1 = addIntInt
!ERROR: address of 'addIntInt' not found
command Admin.+(L:any::1,R:any::1):any::1 = addIntInt;	# 0  dynamic (+:any::1)<-(L:any::1)(R:any::1)
#
#a:=1+"hello";
#b:=3.5+1;
#
!ERROR: '+' undefined in Admin.main[1]
function Admin.main():int;	# 0  (main:int)
    a := +(1,"hello");	# 1  unknown (a:any)<-($2:int)($3:str)
    b := calc.+(3.5,1);	# 2 CALCbinaryADDfltint (b:flt)<-($5:flt)($2:int)
end main;	# 3  
>